# pleskal

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Procfile  README.md  conftest.py  deployment-notes.md  docker-compose.yml  entrypoint.sh  generate_favicons.py  main.py  nixpacks.toml  package-lock.json  package.json  pyproject.toml  railway.backup-cron.toml  railway.cron.toml  railway.scrape-cron.toml  railway.toml  sonar-project.properties  spec.md  sydhavnteater_events.json  tailwind.config.js
.github/workflows/: ci.yml  deploy-production.yml
accounts/: adapters.py  admin.py  backends.py  crypto.py  forms.py  hashers.py  managers.py  models.py  signals.py  urls.py  validators.py  views.py
accounts/migrations/: 0001_initial.py  0002_add_bio_website_to_user.py  0002_add_is_system_account.py  0002_alter_user_bio.py  0002_configure_site.py  0003_add_intro_message.py  0003_claimcode_claimed_by_email_and_more.py  0003_claimcode_created_by.py  0004_add_display_name_to_user.py  0005_remove_user_is_approved_remove_user_is_moderator.py  0006_encrypt_email.py
accounts/tests/: factories.py  test_admin.py  test_claim.py  test_create_source_accounts.py  test_email.py  test_forms.py  test_hashers.py  test_invites.py  test_models.py  test_ratelimit.py  test_security.py  test_validators.py  test_views.py
config/: crypto.py  middleware.py  pwa.py  ratelimit.py  settings.py  urls.py  wsgi.py
config/tests/: test_crypto.py  test_pwa.py
djangotutorial/mysite/: settings.py
events/: admin.py  context_processors.py  feeds.py  forms.py  geocoding.py  image_utils.py  images.py  models.py  moderation_urls.py  moderation_views.py  sharing.py  signals.py  urls.py  validators.py  venues.py  views.py
events/migrations/: 0001_initial.py  0002_add_is_draft_to_event.py  0002_alter_event_category.py  0002_enable_pg_trgm.py  0002_event_latitude_event_longitude.py  0003_eventseries_event_series_and_more.py  0003_remove_event_rejection_note_remove_event_status.py  0003_unique_event_title_start_datetime.py  0004_add_description_max_length.py  0004_add_is_wheelchair_accessible.py  0005_simplify_image_field_remove_thumbnail.py  0006_update_event_categories.py  0007_feedhit.py
events/templatetags/: markdown_filters.py
events/tests/: factories.py  test_admin.py  test_backfill_geocoding.py  test_feeds.py  test_forms.py  test_geocoding.py  test_image_utils.py  test_management_commands.py  test_models.py  test_moderation.py  test_moderation_views.py  test_series.py  test_sharing.py  test_signals.py  test_storage.py  test_templatetags.py  test_validators.py  test_venues.py  test_views.py  test_views_map.py  test_weekly_digest.py
scrapers/: base.py  dansehallerne.py  dansehallerne_workshops.py  hautscene.py  kbhdanser.py  sort_hvid.py  sources.json  sydhavnteater.py  toastercph.py
scrapers/tests/: test_base.py  test_dansehallerne.py  test_dansehallerne_workshops.py  test_hautscene.py  test_kbhdanser.py  test_sort_hvid.py  test_sydhavnteater.py
scripts/: backup_db.py
static/js/: copy-link.js  event-map.js  nav.js  pwa.js  quick-date-filters.js  share.js  show-map.js  subscribe-filters.js  sw-register.js
templates/: about.html  base.html
templates/account/: email_confirm.html
templates/accounts/: account_delete_confirm.html  account_profile.html  change_password.html  claim.html  email_verified.html  login.html  my_invites.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  publisher_profile.html  register.html  registration_pending.html
(+59 files in other folders)
